--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "route3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://KareemE125.github.io/movie_app",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,7 +19,9 @@
     "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
+  "scripts": { 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
