--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "route3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://KareemE125.github.io/movie_app",
+  "homepage": "https://KareemE125.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
