--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "route3",
+  "name": "Movies125",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,13 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
-    "joi": "^17.7.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
